@@ -49,13 +49,13 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.compiler.source>20</maven.compiler.source>
-    <maven.compiler.target>20</maven.compiler.target>
-    <maven.compiler.release>20</maven.compiler.release>
+    <maven.compiler.source>25</maven.compiler.source>
+    <maven.compiler.target>25</maven.compiler.target>
+    <maven.compiler.release>25</maven.compiler.release>
     <checkstyle.config.location>io/aklivity/zilla/conf/checkstyle/configuration.xml</checkstyle.config.location>
     <checkstyle.suppressions.location>io/aklivity/zilla/conf/checkstyle/suppressions.xml</checkstyle.suppressions.location>
     <antlr4.version>4.13.0</antlr4.version>
-    <agrona.version>1.23.1</agrona.version>
+    <agrona.version>2.4.0</agrona.version>
     <slf4j.version>1.7.36</slf4j.version>
     <junit.version>5.10.2</junit.version>
     <byteman.version>4.0.23</byteman.version>
@@ -434,7 +434,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M5</version>
           <configuration>
-            <argLine>@{jacoco.java.option} -Xshare:off</argLine>
+            <argLine>@{jacoco.java.option} -Xshare:off --add-opens java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -447,7 +447,7 @@
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>3.0.0-M4</version>
           <configuration>
-            <argLine>@{jacoco.java.option} -Xshare:off -Djdk.attach.allowAttachSelf=true</argLine>
+            <argLine>@{jacoco.java.option} -Xshare:off -Djdk.attach.allowAttachSelf=true --add-opens java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
           </configuration>
           <executions>
             <execution>
@@ -708,7 +708,7 @@
                       <message>No Snapshots Allowed!</message>
                     </requireReleaseDeps>
                     <requireJavaVersion>
-                      <version>[21,22)</version>
+                      <version>[25,26)</version>
                     </requireJavaVersion>
                     <requireProperty>
                       <property>release</property>
